# MissionController

./: .gitignore  CMakeLists.txt  README.md  internalCommunication.proto
src/: CommunicationContext.h  ExternalCommunicationImplementation.cpp  ExternalCommunicationImplementation.h  InternalCommunicationImplementation.cpp  InternalCommunicationImplementation.h  MediaContext.h  MediaHandler.cpp  MediaHandler.h  Vehicle.cpp  Vehicle.h  main.cpp
